--- a/core/abnormal_volumes_ru_stocks.ipynb
+++ b/core/abnormal_volumes_ru_stocks.ipynb
@@ -5257,9 +5257,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<generator object Services.get_all_candles at 0x128117a70>\n"
+     ]
+    }
+   ],
    "source": [
     "from tinkoff.invest import Client\n",
     "\n",
@@ -5609,126 +5617,76 @@
     "def main():\n",
     "    with Client(TOKEN) as client:        \n",
     "        # try to track abnormal volumes on Alrosa\n",
-    "        for candle in client.get_all_candles(\n",
+    "        print(client.get_all_candles(\n",
     "            figi=PLZL.figi,\n",
     "            from_=now() - timedelta(days=90),\n",
-    "            interval=CandleInterval.CANDLE_INTERVAL_1_MIN,\n",
-    "        ):\n",
-    "            if quotation_to_decimal(candle.close) < 1:\n",
-    "                # BUYING VOLUME AND SELLING VOLUME\n",
-    "                if candle.high == candle.low:\n",
-    "                    BV = 0\n",
-    "                    SV = 0\n",
-    "                else:\n",
-    "                    BV = (float(candle.volume) * (float(quotation_to_decimal(candle.close)) - float(quotation_to_decimal(candle.low)))) / (float(quotation_to_decimal(candle.high)) - float(quotation_to_decimal(candle.low)))\n",
-    "                    SV = (float(candle.volume) * (float(quotation_to_decimal(candle.high)) - float(quotation_to_decimal(candle.close)))) / (float(quotation_to_decimal(candle.high)) - float(quotation_to_decimal(candle.low)))\n",
-    "                    TP = BV + SV\n",
-    "                    BVP = round((BV / TP) * 100)\n",
-    "                    SVP = round((SV / TP) * 100)\n",
-    "\n",
-    "                    final_stock_volume_rub = int(candle.volume * float(quotation_to_decimal(candle.close)))\n",
-    "                    plzl_volumes.append(make_million_volumes_on_float_stock_prices(final_stock_volume_rub))\n",
-    "                    plzl_lots.append(get_final_lots(candle.volume)) # get_final_lots\n",
-    "                    plzl_prices.append(float(quotation_to_decimal(candle.close)))\n",
-    "                    plzl_time.append(candle.time)\n",
-    "                    plzl_close.append(float(quotation_to_decimal(candle.close)))\n",
-    "                    plzl_high.append(float(quotation_to_decimal(candle.high)))\n",
-    "                    plzl_low.append(float(quotation_to_decimal(candle.low)))\n",
-    "                    plzl_bvp.append(BVP)\n",
-    "                    plzl_svp.append(SVP)\n",
-    "\n",
-    "                    if len(plzl_volumes) > LENGTH_OF_PLZL_DF and len(plzl_lots) > LENGTH_OF_PLZL_DF and len(plzl_prices) > LENGTH_OF_PLZL_DF and len(plzl_time) > LENGTH_OF_PLZL_DF and len(plzl_close) > LENGTH_OF_PLZL_DF and len(plzl_high) > LENGTH_OF_PLZL_DF and len(plzl_low) > LENGTH_OF_PLZL_DF and len(plzl_bvp) > LENGTH_OF_PLZL_DF and len(plzl_bvp) > LENGTH_OF_PLZL_DF:\n",
-    "                        del plzl_volumes[0]\n",
-    "                        del plzl_lots[0]\n",
-    "                        del plzl_prices[0]\n",
-    "                        del plzl_time[0]\n",
-    "                        del plzl_close[0]\n",
-    "                        del plzl_high[0]\n",
-    "                        del plzl_low[0]\n",
-    "                        del plzl_bvp[0]\n",
-    "                        del plzl_svp[0]\n",
-    "\n",
-    "            else:\n",
-    "                # BUYING VOLUME AND SELLING VOLUME\n",
-    "                if candle.high == candle.low:\n",
-    "                    BV = 0\n",
-    "                    SV = 0\n",
-    "                else:\n",
-    "                    BV = (float(candle.volume) * (float(quotation_to_decimal(candle.close)) - float(quotation_to_decimal(candle.low)))) / (float(quotation_to_decimal(candle.high)) - float(quotation_to_decimal(candle.low)))\n",
-    "                    SV = (float(candle.volume) * (float(quotation_to_decimal(candle.high)) - float(quotation_to_decimal(candle.close)))) / (float(quotation_to_decimal(candle.high)) - float(quotation_to_decimal(candle.low)))\n",
-    "                    TP = BV + SV\n",
-    "                    BVP = round((BV / TP) * 100)\n",
-    "                    SVP = round((SV / TP) * 100)\n",
-    "                \n",
-    "                    #final_stock_volume_rub = int(candle.volume * quotation_to_decimal(candle.close))\n",
-    "                    plzl_volumes.append(int(candle.volume * quotation_to_decimal(candle.close)))\n",
-    "                    plzl_lots.append(get_final_lots(candle.volume)) # get_final_lots\n",
-    "                    plzl_prices.append(int(quotation_to_decimal(candle.close)))\n",
-    "                    plzl_time.append(candle.time)\n",
-    "                    plzl_close.append(float(quotation_to_decimal(candle.close)))\n",
-    "                    plzl_high.append(float(quotation_to_decimal(candle.high)))\n",
-    "                    plzl_low.append(float(quotation_to_decimal(candle.low)))\n",
-    "                    plzl_bvp.append(BVP)\n",
-    "                    plzl_svp.append(SVP)\n",
-    "\n",
-    "                    if len(plzl_volumes) > LENGTH_OF_PLZL_DF and len(plzl_lots) > LENGTH_OF_PLZL_DF and len(plzl_prices) > LENGTH_OF_PLZL_DF and len(plzl_time) > LENGTH_OF_PLZL_DF and len(plzl_close) > LENGTH_OF_PLZL_DF and len(plzl_high) > LENGTH_OF_PLZL_DF and len(plzl_low) > LENGTH_OF_PLZL_DF and len(plzl_bvp) > LENGTH_OF_PLZL_DF and len(plzl_bvp) > LENGTH_OF_PLZL_DF:\n",
-    "                        del plzl_volumes[0]\n",
-    "                        del plzl_lots[0]\n",
-    "                        del plzl_prices[0]\n",
-    "                        del plzl_time[0]\n",
-    "                        del plzl_close[0]\n",
-    "                        del plzl_high[0]\n",
-    "                        del plzl_low[0]\n",
-    "                        del plzl_bvp[0]\n",
-    "                        del plzl_svp[0]\n",
+    "            interval=CandleInterval.CANDLE_INTERVAL_1_MIN))\n",
     "        \n",
-    "        df = pd.DataFrame(plzl_data)\n",
     "\n",
-    "        # Calculate the rolling average and standard deviation of the trading volume\n",
-    "        volume_mean = df['Объем'].mean()\n",
-    "        volume_std = df['Объем'].std()\n",
-    "        \n",
-    "        # Calculate the rolling average and standard deviation of the trading prices\n",
-    "        prices_mean = df['Цена'].mean()\n",
-    "        prices_std = df['Цена'].std()\n",
-    "\n",
-    "        '''print(len(p_volumes))\n",
-    "        print(len(p_lots))\n",
-    "        print(len(p_time))\n",
-    "        print(len(p_high))\n",
-    "        print(len(p_close))\n",
-    "        print(len(p_prices))\n",
-    "        print(len(p_low))\n",
-    "        print(len(p_bvp))\n",
-    "        print(len(p_svp))'''\n",
-    "        \n",
-    "        '''abnormal_volume = (df['Объем'].iloc[-1] - volume_mean) / volume_std\n",
-    "        abnormal_price_changes = (df['Цена'].iloc[-1] - prcices_mean) / prices_std'''\n",
-    "\n",
-    "        for i in range(len(df)):\n",
-    "            abnormal_volume = (df['Объем'].iloc[i] - volume_mean) / volume_std\n",
-    "            abnormal_price_changes = (df['Цена'].iloc[i] - prices_mean) / prices_std\n",
     "            \n",
-    "            if abnormal_volume > THRESHOLD or abnormal_price_changes > THRESHOLD:\n",
-    "                if df[\"Покупка\"].iloc[i] > df[\"Продажа\"].iloc[i]:\n",
-    "                    print(f'#{PLZL.ticker} {PLZL.name}\\n🟩 Аномальный объем\\n{calculate_net_change(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 1])}\\n{get_stock_volumes(df[\"Объем\"].iloc[i])} ({df[\"Лоты\"].iloc[i]})\\nПокупка: {df[\"Покупка\"].iloc[i]}% Продажа: {df[\"Продажа\"].iloc[i]}%\\nВремя: {convert_time_to_moscow(df[\"Время\"].iloc[i])}\\nЦена: {df[\"Цена\"].iloc[i]} ₽\\n{calculate_net_change_per_day(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 840])}\\nЗаметил Баффет на Уораннах.')\n",
-    "                    print('=========================================')\n",
-    "                else:\n",
-    "                    print(f'#{PLZL.ticker} {PLZL.name}\\n🔻 Аномальный объем\\n{calculate_net_change(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 1])}\\n{get_stock_volumes(df[\"Объем\"].iloc[i])} ({df[\"Лоты\"].iloc[i]})\\nПокупка: {df[\"Покупка\"].iloc[i]}% Продажа: {df[\"Продажа\"].iloc[i]}%\\nВремя: {convert_time_to_moscow(df[\"Время\"].iloc[i])}\\nЦена: {df[\"Цена\"].iloc[i]} ₽\\n{calculate_net_change_per_day(df[\"Цена\"].iloc[i], df[\"Цена\"].iloc[i - 840])}\\nЗаметил Баффет на Уораннах.')\n",
-    "                    print('=========================================')\n",
-    "            \n",
-    "        '''if abnormal_volume >= THRESHOLD or abnormal_price_changes > THRESHOLD:\n",
-    "            if df[\"Покупка\"].iloc[-1] > df[\"Продажа\"].iloc[-1]:\n",
-    "                print(f'#{YNDX.ticker} {YNDX.name}\\n🟩 Аномальный объем\\n{calculate_net_change(df[\"Цена\"].iloc[-1], df[\"Цена\"].iloc[-1 - 1])}\\n{get_stock_volumes(make_million_volumes_on_int_stock_prices(df[\"Объем\"].iloc[-1]))} ({df[\"Лоты\"].iloc[-1]})\\nПокупка: {df[\"Покупка\"].iloc[-1]}% Продажа: {df[\"Продажа\"].iloc[-1]}%\\nВремя: {convert_time_to_moscow(df[\"Время\"].iloc[-1])}\\nЦена: {df[\"Цена\"].iloc[-1]} ₽\\n{calculate_net_change_per_day(df[\"Цена\"].iloc[-1], df[\"Цена\"].iloc[-1 - 840])}\\nЗаметил Баффет на Уораннах.')\n",
-    "            else:\n",
-    "                print(f'#{YNDX.ticker} {YNDX.name}\\n🔻 Аномальный объем\\n{calculate_net_change(df[\"Цена\"].iloc[-1], df[\"Цена\"].iloc[-1 - 1])}\\n{get_stock_volumes(make_million_volumes_on_int_stock_prices(df[\"Объем\"].iloc[-1]))} ({df[\"Лоты\"].iloc[-1]})\\nПокупка: {df[\"Покупка\"].iloc[-1]}% Продажа: {df[\"Продажа\"].iloc[-1]}%\\nВремя: {convert_time_to_moscow(df[\"Время\"].iloc[-1])}\\nЦена: {df[\"Цена\"].iloc[-1]} ₽\\n{calculate_net_change_per_day(df[\"Цена\"].iloc[-1], df[\"Цена\"].iloc[-1 - 840])}\\nЗаметил Баффет на Уораннах.')'''\n",
-    "\n",
     "                \n",
     "    return 0\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    #while True:\n",
     "    main()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting tradingview-ta\n",
+      "  Downloading tradingview_ta-3.3.0-py3-none-any.whl (10 kB)\n",
+      "Requirement already satisfied: requests in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from tradingview-ta) (2.29.0)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from requests->tradingview-ta) (3.1.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/ianmiller/Library/Python/3.11/lib/python/site-packages (from requests->tradingview-ta) (3.4)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages (from requests->tradingview-ta) (1.26.15)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/ianmiller/Library/Python/3.11/lib/python/site-packages (from requests->tradingview-ta) (2023.5.7)\n",
+      "Installing collected packages: tradingview-ta\n",
+      "Successfully installed tradingview-ta-3.3.0\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip available: \u001b[0m\u001b[31;49m22.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.1.2\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip3 install --upgrade pip\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip3 install tradingview-ta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Close: 165.83\n",
+      "Open: 165.83\n",
+      "Volume: 60\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tradingview_ta import TA_Handler, Interval, Exchange\n",
+    "\n",
+    "gazp = TA_Handler(\n",
+    "    symbol=\"GAZP\",\n",
+    "    screener=\"russia\",\n",
+    "    exchange=\"MOEX\",\n",
+    "    interval=Interval.INTERVAL_1_MINUTE\n",
+    ")\n",
+    "print(f'Close: {gazp.get_indicators()[\"close\"]}')\n",
+    "print(f'Open: {gazp.get_indicators()[\"open\"]}')\n",
+    "print(f'Volume: {gazp.get_indicators()[\"volume\"]}')"
    ]
   },
   {
